--- a/photographer.html
+++ b/photographer.html
@@ -93,9 +93,9 @@
 
   <!-- Modal pour agrandissement -->
   <div id="modal" class="modal" role="dialog"  aria-labelledby="modal-title">
-    <button class="close" aria-label="Fermer la fenêtre d'agrandissement">&times;</button>
-    <button class="prev" aria-label="Image précédente">&#10094;</button>
-    <button class="next" aria-label="Image suivante">&#10095;</button>
+    <span class="close" aria-label="Fermer la fenêtre d'agrandissement">&times;</span>
+    <span class="prev" aria-label="Image précédente">&#10094;</span>
+    <span class="next" aria-label="Image suivante">&#10095;</span>
     <div class="modal-content">
       <div id="modal-media-container"></div>
       <p id="modal-title" aria-live="polite"></p>
