ajouté aria label

--- a/photographer.html
+++ b/photographer.html
@@ -86,16 +86,16 @@
 
   <footer class="barre" >
     <span class="number" ></span>
-    <span class="heart" >❤</span>
+    <span class="heart" aria-label="Ajouter aux favoris" >❤</span>
     <span class="price" ></span>
   </footer>
 
 
   <!-- Modal pour agrandissement -->
   <div id="modal" class="modal" role="dialog"  aria-labelledby="modal-title">
-    <span class="close" >&times;</span>
-    <span class="prev" >&#10094;</span>
-    <span class="next" >&#10095;</span>
+    <span class="close" aria-label="Fermer la modale" >&times;</span>
+    <span class="prev" aria-label="media passé">&#10094;</span>
+    <span class="next" aria-label="media suivante" >&#10095;</span>
     <div class="modal-content">
       <div id="modal-media-container"></div>
       <p id="modal-title" aria-live="polite"></p>
