--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header id="index">
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo">
+        <img src="assets/images/logo.png" class="logo" alt="">
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
